# quantumlib

./: .gitignore  LICENSE  MANIFEST.in  README.md  REFACTORING_PLAN.md  Taskfile.yml  estimation.py  pyproject.toml
notebooks/demos/: chsh_dynamic_circuits.ipynb  chsh_dynamic_circuits_fixed.ipynb  chsh_simple.ipynb  chsh_visualization.ipynb  hello_quantum.ipynb
notebooks/scratch/: README.md
notebooks/templates/: simple_template.ipynb
src/oqtopus_experiments/: __init__.py
src/oqtopus_experiments/backend/: oqtopus.py
src/oqtopus_experiments/circuit/: __init__.py  chsh_circuits.py  common_circuits.py  factory.py  parity_circuits.py  rabi_circuits.py  t1_circuits.py
src/oqtopus_experiments/cli/: __init__.py  base_cli.py  chsh.py  rabi.py  ramsey.py  t1.py  t2_echo.py
src/oqtopus_experiments/core/: __init__.py  base_experiment.py  data_manager.py  parallel_execution.py
src/oqtopus_experiments/experiments/: __init__.py  chsh.py  parity_oscillation.py  rabi.py  ramsey.py  t1.py  t2_echo.py
src/oqtopus_experiments/experiments/chsh/: __init__.py  chsh_experiment.py  chsh_legacy.py
src/oqtopus_experiments/experiments/parity_oscillation/: parity_oscillation_experiment.py
src/oqtopus_experiments/experiments/rabi/: __init__.py  rabi_experiment.py
src/oqtopus_experiments/experiments/ramsey/: ramsey_experiment.py
src/oqtopus_experiments/experiments/t1/: __init__.py  t1_experiment.py
src/oqtopus_experiments/experiments/t2_echo/: __init__.py  t2_echo_experiment.py
src/oqtopus_experiments/models/: __init__.py  base.py  cli.py  config.py  experiments.py  results.py
src/oqtopus_experiments/templates/: __init__.py  chsh_examples.py  simple_examples.py
src/oqtopus_experiments/utils/: __init__.py  config_loader.py  data_management.py  display.py  oqtopus_utils.py  statistics.py  validation.py
src/quantumlib/: __init__.py  chsh_correct.py  chsh_final.py  chsh_phase.py  chsh_simple.py  heisenberg_simulation.py
src/quantumlib/algorithms/: __init__.py
src/quantumlib/backend/: __init__.py  oqtopus.py
src/quantumlib/circuit/: __init__.py  chsh_circuits.py  common_circuits.py  factory.py  parity_circuits.py  rabi_circuits.py  ramsey_circuits.py  t1_circuits.py
src/quantumlib/circuits/: __init__.py
src/quantumlib/cli/: __init__.py  base_cli.py  chsh.py  rabi.py  ramsey.py  t1.py  t2_echo.py
src/quantumlib/core/: __init__.py  base_experiment.py  data_manager.py  parallel_execution.py
src/quantumlib/experiments/: __init__.py
src/quantumlib/experiments/chsh/: __init__.py  chsh_experiment.py  chsh_experiment.py.backup  chsh_legacy.py
src/quantumlib/experiments/parity_oscillation/: __init__.py  parity_oscillation_experiment.py
src/quantumlib/experiments/rabi/: __init__.py  rabi_experiment.py
src/quantumlib/experiments/ramsey/: __init__.py  ramsey_experiment.py
src/quantumlib/experiments/t1/: __init__.py  t1_experiment.py
src/quantumlib/experiments/t2_echo/: __init__.py  t2_echo_experiment.py
src/quantumlib/templates/: __init__.py  chsh_examples.py  simple_examples.py
src/quantumlib/utils/: __init__.py  display.py  oqtopus_utils.py
src/quantumlib/visualization/: __init__.py
workspace/configs/: default_experiment_config.json
workspace/experiments/: chsh_research_template.py  research_cli.py
workspace/experiments/results/chsh_research_1752361777_20250713_080937/data/: chsh_experiment_results_20250713_080937.json
workspace/experiments/results/quick_verification_1752361453_20250713_080413/data/: chsh_experiment_results_20250713_080413.json
workspace/scripts/: chsh.py  parity_oscillation.py  parity_oscillation_cli.py  rabi.py  ramsey.py  t1.py  t1_demo.py  t2_echo.py
