[project]
name = "quantumlib"
version = "0.1.0"
description = "A quantum computing library optimized for Jupyter notebook development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0.0",
    # Core quantum computing libraries
    "qiskit>=2.1.0",
    "qiskit-aer>=0.13.0",
    "cirq>=1.3.0",
    "pennylane>=0.37.0",
    "amazon-braket-sdk>=1.75.0",
    "qutip>=5.0.0",
    "pyquil>=4.14.0",
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12.0",
    # Data analysis and visualization
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "ipywidgets>=8.0.0",
    "networkx>=3.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
