[project]
name = "quantumlib"
version = "0.1.0"
description = "A modular quantum computing framework optimized for research and experimentation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["quantum", "computing", "research", "experiment", "qiskit", "cirq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0.0",
    # Core quantum computing libraries
    "qiskit<=1.3.0",
    "qiskit-aer>=0.13.0",
    "cirq>=1.3.0",
    "pennylane>=0.37.0",
    "amazon-braket-sdk>=1.75.0",
    "qutip>=5.0.0",
    "pyquil>=4.14.0",
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12.0",
    # Data analysis and visualization
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "ipywidgets>=8.0.0",
    "networkx>=3.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
    "pylatexenc>=2.10",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "quri-parts-oqtopus>=1.0.3",
    "tranqu",
]

[project.urls]
Homepage = "https://github.com/orangekame3/quantumlib"
Repository = "https://github.com/orangekame3/quantumlib"
Documentation = "https://github.com/orangekame3/quantumlib#readme"
Issues = "https://github.com/orangekame3/quantumlib/issues"

[project.scripts]
quantumlib-chsh = "quantumlib.cli.chsh:main"
quantumlib-rabi = "quantumlib.cli.rabi:main"
quantumlib-ramsey = "quantumlib.cli.ramsey:main"
quantumlib-t1 = "quantumlib.cli.t1:main"
quantumlib-t2-echo = "quantumlib.cli.t2_echo:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B006",  # mutable default arguments (needed for CLI defaults)
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["B011"]  # assert False

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Disable stub warnings for untyped imports
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "qulacs.*",
    "quri_parts.*",
    "cirq.*",
    "matplotlib.*",
    "plotly.*",
    "rich.*",
]
ignore_missing_imports = true
